data/derived/comb/progs/unify/prog4988.ml.out
Characters 63-66:
  let fixpoint (f,b) = wwhile ((fun x -> (wwhile (f,b), not (b = f b))),b);;
                                                                 ^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * bool
